# salud_publica_digital

./: README.md  db.sqlite3  manage.py  pyproject.toml  queries.txt  salud_publica_digital.pptx  salud_publica_digital.txt
consultorio/: db.py  models.py  reserva.py  urls.py  views.py
consultorio/migrations/: 0001_initial.py  0002_remove_reserva_consultorio_remove_reserva_paciente_and_more.py  0002_rename_object_id_consultorio_objectid.py  0003_delete_administrador.py  0003_reserva.py  0004_paciente_alter_reserva_paciente.py  0004_profesional_c_com_profesional_c_reg.py
consultorio/templates/: agregar_hora.html  cancelar_hora.html  configuracion.html  consultorio.html  error_403.html  mis_horas.html  reintenta.html  reservar_hora.html  seleccionar_hora.html
docs/: diccionario_datos.docx  er-extended.drawio  er.drawio
dump/sqlite3/: salud_publica_digital.sql
principal/: urls.py  views.py
principal/templates/: principal.html  principal_paciente.html  principal_profesional.html  seleccion_usuario.html
registro/: apps.py  forms.py  views.py
registro/migrations/: 0001_initial.py  0002_remove_profile_address_remove_profile_birth_date_and_more.py  0003_alter_profile_email_alter_profile_nombre_and_more.py  0004_rename_profile_paciente.py  0005_rename_user_paciente_username.py  0006_rename_username_paciente_rut.py  0007_alter_paciente_rut.py  0008_profile_delete_paciente.py  0009_rename_rut_profile_username.py  0010_rename_username_profile_user.py  0011_delete_profile.py
salud_publica_digital/: api.py  asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
(+18 files in other folders)
