[tool.poetry]
name = "salud-publica-digital"
version = "0.1.0"
description = "Proyecto de Salud Pública Digital"
authors = ["Alejandro Dinamarca <a.dinamarca@canalcero.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
django = "^5.0.6"
django-crispy-forms = "^2.2"
crispy-bootstrap5 = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
